mdapi/objects/Totali_Donatore_Anno__c/Totali_Donatore_Anno__c.object-meta.xml
<CustomObject>
    <label>Totali Donatore Anno</label>
    <nameField>
        <label>Totali Donatore Anno Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Totali Donatore Anno</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>