mdapi/objects/Totali_Donatore_Anno__c/fields/Allocabile__c.field-meta.xml
<CustomField>
    <fullName>Allocabile__c</fullName>
    <label>Allocabile</label>
    <summarizedField>Transazione_Shadow__c.Allocabile_Static__c</summarizedField>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>