mdapi/objects/Totali_Donatore_Anno__c/fields/Allocazioni_NON_Pagate__c.field-meta.xml
<CustomField>
    <fullName>Allocazioni_NON_Pagate__c</fullName>
    <label>Allocazioni NON Pagate</label>
    <summarizedField>Transazione_Shadow__c.Allocazioni_NON_Pagate_Static__c</summarizedField>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>