mdapi/objects/Totali_Donatore_Anno__c/fields/Donato_Originale__c.field-meta.xml
<CustomField>
    <fullName>Donato_Originale__c</fullName>
    <label>Donato Originale</label>
    <summarizedField>Transazione_Shadow__c.Donato_Originale_Static__c</summarizedField>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>