mdapi/objects/Totali_Donatore_Anno__c/fields/Numero_Allocazioni__c.field-meta.xml
<CustomField>
    <fullName>Numero_Allocazioni__c</fullName>
    <label>Numero Allocazioni</label>
    <summarizedField>Transazione_Shadow__c.Numero_Allocazioni_Static__c</summarizedField>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>