mdapi/objects/Totali_Donatore_Anno__c/fields/Totale_Allocato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Allocato__c</fullName>
    <label>Totale Allocato</label>
    <summarizedField>Transazione_Shadow__c.Totale_Allocato_Static__c</summarizedField>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>