mdapi/objects/Totali_Donatore_Anno__c/fields/Totale_Durata_Visite__c.field-meta.xml
<CustomField>
    <fullName>Totale_Durata_Visite__c</fullName>
    <label>Totale Durata Visite</label>
    <summarizedField>Fattura_Shadow__c.Totale_Durata_Visite_Static__c</summarizedField>
    <summaryForeignKey>Fattura_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>