mdapi/objects/Totali_Donatore_Anno__c/fields/Totale_Fattura__c.field-meta.xml
<CustomField>
    <fullName>Totale_Fattura__c</fullName>
    <label>Totale Fattura</label>
    <summarizedField>Fattura_Shadow__c.Totale_Fattura_Static__c</summarizedField>
    <summaryForeignKey>Fattura_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>