mdapi/objects/Totali_Donatore_Anno__c/fields/Totale_Numero_Biglietti__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Biglietti__c</fullName>
    <label>Totale Numero Biglietti</label>
    <summarizedField>Fattura_Shadow__c.Totale_Numero_di_Biglietti_Static__c</summarizedField>
    <summaryForeignKey>Fattura_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>