mdapi/objects/Totali_Donatore_Anno__c/fields/Totale_Numero_Donazioni__c.field-meta.xml
<CustomField>
    <fullName>Totale_Numero_Donazioni__c</fullName>
    <label>Totale Numero Donazioni</label>
    <summaryForeignKey>Transazione_Shadow__c.Totali_Donatore_Anno__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>